# fmcg-demand-forecast

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
config/: default.yaml
docker/: Dockerfile  docker-compose.yml
docs/plans/: 2026-02-26-implementation-plan.md  2026-02-26-portfolio-showcase-design.md
notebooks/: demo.ipynb
scripts/: generate_data.py  run_all.py  run_demand.py  run_sales.py
src/fmcg_forecast/: config.py
src/fmcg_forecast/data/: calendar.py  generator.py  loader.py
src/fmcg_forecast/demand/: forecaster.py  preprocessing.py
src/fmcg_forecast/models/: lstm_attention.py
src/fmcg_forecast/sales/: fetch.py  individual.py  merged.py  recommendations.py
src/fmcg_forecast/utils/: logging.py  paths.py
tests/: conftest.py  test_calendar.py  test_config.py  test_data_utils.py  test_demand_forecaster.py  test_demand_preprocessing.py  test_generator.py  test_logging.py  test_model.py  test_paths.py  test_recommendations.py  test_sales_individual.py  test_sales_merged.py
