[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fmcg-demand-forecast"
version = "0.1.0"
description = "LSTM-Attention demand forecasting pipeline for FMCG retail with Indonesian market calendar features"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Johannes Baptista Adiatmaja Pambudi"}
]
dependencies = [
    "torch>=2.0",
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "statsmodels>=0.14",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "matplotlib>=3.7",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.0",
    "ruff>=0.4",
    "mypy>=1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "C4", "DTZ", "EM", "ISC", "PIE", "PT", "Q", "RET", "SIM", "TID", "ARG"]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in default arg
    "ARG001", # unused function argument
    "ARG002", # unused method argument
    "N803",   # argument name should be lowercase (ML convention: X, X_train)
    "N806",   # variable name should be lowercase (ML convention: X, X_val)
    "DTZ001", # datetime() without tzinfo (internal date arithmetic, no tz needed)
    "EM102",  # exception with f-string literal (minor style concern)
    "B905",   # zip() without strict= (Python 3.11+, notebooks not strict)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"notebooks/*.ipynb" = ["E402", "PIE810", "B905", "N806"]

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.mypy]
python_version = "3.11"
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_return_any = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true
no_implicit_optional = true

[[tool.mypy.overrides]]
# PyTorch and sklearn stubs return Any — suppress no-any-return for model files
module = [
    "fmcg_forecast.models.lstm_attention",
    "fmcg_forecast.demand.forecaster",
]
warn_return_any = false

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: fast, isolated unit tests",
    "integration: tests that touch external systems",
    "slow: tests that take more than a few seconds",
]
addopts = "-v --tb=short"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "types-pyyaml",
]
